k8s/argocd/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: gateway
      sectionName: argocd
  hostnames:
    - argocd.szp15.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 443
          weight: 1
